# tgBotTemplate

./: .envexample  .gitignore  README.md  alembic.ini  config.toml  config_env_mapping.toml
src/: setup.py
src/mypackage/: __init__.py  logger.py  pyproject.toml
src/mypackage/bot/: __init__.py  utils.py
src/mypackage/bot/filters/: __init__.py  callback_data.py  roles.py
src/mypackage/bot/handlers/: __init__.py  basic_commands.py  unhandled.py
src/mypackage/bot/keyboards/: __init__.py
src/mypackage/bot/messages/: __init__.py
src/mypackage/bot/middlewares/: __init__.py  extra_arguments.py
src/mypackage/bot/states/: __init__.py
src/mypackage/config/: __init__.py  models.py
src/mypackage/db/: __init__.py  adapter.py  models.py
src/mypackage/db/dto/: __init__.py
src/mypackage/db/migrations/: env.py
src/mypackage/db/operations/: __init__.py
src/mypackage/webhook/: endpoint.py
